<resources>
    <string name="app_name">ShoppingScanner</string>
    <string name="scan">Scan</string>
    <string name="add">Add Items</string>
    <string name="additem">Add Item</string>
    <string name="dummy">DUmmy text</string>
    <string name="rupeesymbol">₹</string>
    <string name="pricedummy">----/-</string>
    <string name="quantity">Quantity:</string>
    <string name="barcodedummy">09876543456</string>
    <string name="name">Name</string>
    <string name="barcode">Barcode</string>
    <string name="price">Price</string>
    <string name="bill">Generate Bill</string>
</resources>
