<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_item_button"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        app:backgroundTint="@color/colorPrimary"
        app:borderWidth="8dp"                                              
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_24"
        android:background="@color/colorPrimary"
        android:text="@string/additem"
        android:textColor="@color/white" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_add_items"
        android:layout_width="395dp"
        android:layout_height="474dp"
        android:layout_above="@id/inputlayout"

        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp" />



    <android.support.v7.widget.CardView
        android:id="@+id/inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/name" />

                <EditText

                    android:id="@+id/product_name_et"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:hint="product name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/barcode" />

                <EditText

                    android:id="@+id/barcode_et"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/barcode" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/price" />

                <EditText

                    android:id="@+id/price_et"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:hint="@string/price" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="save"
                android:id="@+id/save_btn"
                android:textColor="@color/white" />

        </LinearLayout>
    </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
